<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/clRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nsvAlbumDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <RelativeLayout
                android:id="@+id/rlAlbumDetails"
                android:layout_width="match_parent"
                android:layout_height="@dimen/details_image_height"
                >

                <ImageView
                    android:id="@+id/ivAlbumImage"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/details_image_height"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:minHeight="@dimen/details_image_height"
                    android:src="@drawable/icon"
                    android:scaleType="centerCrop"
                    android:transitionName="@string/to_details_transition"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@color/colorBackgroundTransparent"
                    android:padding="16dp"
                    android:orientation="vertical">

                <TextView
                    android:id="@+id/tvAlbumName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/album_name_placeholder"
                    style="@style/AppTheme.CardHeadLineTextStyle"
                    android:shadowColor="@color/colorTextWhite"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="60"
                    />

                <TextView
                    android:id="@+id/tvArtistName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/album_by_artist_placeholder"
                    style="@style/AppTheme.CardBodyTextStyle"
                    android:shadowColor="@color/colorTextWhite"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="60"
                    />

                </LinearLayout>

            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvTrackList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/outer_space"
                >
            </android.support.v7.widget.RecyclerView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>