...
    android:layout_height="match_parent"
    android:padding="@dimen/outer_space"
    android:clipChildren="false"
    android:clipToPadding="false">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvArtists"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/placeholder"
...
